--- a/src/Views/Table/table.scss
+++ b/src/Views/Table/table.scss
@@ -1,10 +1,10 @@
 /** @format */
 
 .tableContainer {
-  width: 54%;
+  // width: 54%;
 
   margin-top: 100px;
-  margin-left: auto;
+  margin-left: 100px;
   margin-right: auto;
 
   table {
@@ -25,6 +25,30 @@
     td:nth-child(6) {
       justify-content: center;
       cursor: pointer;
+    }
+  }
+}
+.modal-container {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  width: 300px;
+  // left: 0;
+  // right: 0;
+  // bottom: 0;
+  // top: 0;
+  background: rgba(92, 36, 36, 0.842);
+  .input-container {
+    padding: 60px;
+    bottom: 0;
+    input {
+      margin-top: 20px;
+      height: 30px;
+    }
+    button {
+      margin-top: 10px;
+
+      padding: 10px;
     }
   }
 }
